--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,3 +7,12 @@ services:
       - ./trained_models:/code/trained_models
     ports:
       - 8888:8888 
+  rabbitmq:
+    image: rabbitmq:4-management
+    container_name: rabbitmq
+    ports:
+      - '5672:5672'
+      - '15672:15672'
+    environment:
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
