--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,9 @@ services:
       - ./trained_models:/code/trained_models
     ports:
       - 8888:8888 
+    depends_on:
+      - rabbitmq
+      - mongo
   rabbitmq:
     image: rabbitmq:4-management
     container_name: rabbitmq
@@ -16,3 +19,15 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
+  mongo:
+    image: mongo
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+    ports:
+      - 27017:27017
+    volumes:
+      - mongo_data:/data/db
+
+volumes:
+  mongo_data:
