--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,13 @@ RMQ_PASSWORD="guest"
 
 # IP sniffer
 HOST_IP_ADDRESS="194.233.72.57"
+
+# MongoDB
+MONGO_HOST="mongo"
+MONGO_PORT="27017"
+MONGO_USERNAME="root"
+MONGO_PASSWORD="example"
+MONGO_DATABASE="ids_database"
+
+# Statistics
+STATS_SAVE_INTERVAL="5"  # Save network statistics to MongoDB eyyvery 60 seconds
