--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,9 @@ RMQ_PASSWORD="guest"
 
 # IP sniffer
 HOST_IP_ADDRESS="194.233.72.57"
+
+MONGO_HOST="mongo"
+MONGO_PORT=27017
+MONGO_USERNAME="root"
+MONGO_PASSWORD="example"
+MONGO_DATABASE="ids_database"
